changes to article #3

--- a/public/search/index.html
+++ b/public/search/index.html
@@ -10,6 +10,16 @@
 <meta name="description" content="search">
 <meta name="author" content="| Author: Satish Eshwar">
 <link rel="canonical" href="http://localhost:1313/search/">
+
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-HTZMWV26BV"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-HTZMWV26BV');
+</script>
 <link crossorigin="anonymous" href="/assets/css/stylesheet.fe9aa0db0f0f5c6f45da8d536c7beada0f540f21d92d30ef417ec8f9e7deb952.css" integrity="sha256-/pqg2w8PXG9F2o1TbHvq2g9UDyHZLTDvQX7I&#43;efeuVI=" rel="preload stylesheet" as="style"><link crossorigin="anonymous" rel="preload" as="fetch" href="../index.json">
 <script defer crossorigin="anonymous" src="/assets/js/search.0cb52d6b1628dc11278c9d7d1418939954e1ba118f5e2c29f43a3c0b14d5a8e4.js" integrity="sha256-DLUtaxYo3BEnjJ19FBiTmVThuhGPXiwp9Do8CxTVqOQ="></script>
 <link rel="icon" href="http://localhost:1313/favicon.ico">
