--- a/public/interests/interests/index.html
+++ b/public/interests/interests/index.html
@@ -11,6 +11,16 @@
 I love this name, and I might put a lot of my creative works into this domain. But the domain itself is where I explore the unpredictable nature of life and decision-making. The concept centers around the role of probability in our everyday choices, actions, and beliefs, highlighting both favorable and unfavorable outcomes. The name BadProbability.com was chosen intentionally to focus on the often-overlooked, less glamorous side of probability—the &ldquo;bad&rdquo; outcomes that shape our experiences and how life&rsquo;s uncertainties and setbacks play a significant role in our personal growth and adaptation.">
 <meta name="author" content="| Author: Satish Eshwar">
 <link rel="canonical" href="http://localhost:1313/interests/interests/">
+
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-HTZMWV26BV"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-HTZMWV26BV');
+</script>
 <link crossorigin="anonymous" href="/assets/css/stylesheet.fe9aa0db0f0f5c6f45da8d536c7beada0f540f21d92d30ef417ec8f9e7deb952.css" integrity="sha256-/pqg2w8PXG9F2o1TbHvq2g9UDyHZLTDvQX7I&#43;efeuVI=" rel="preload stylesheet" as="style">
 <link rel="icon" href="http://localhost:1313/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="http://localhost:1313/favicon-16x16.png">
